--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ APP_SECRET=69ab9e8089994c56a6d9846ee7bd8dd8
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:prueba@45.79.56.138:3307/db_name?serverVersion=5.7
+DATABASE_URL=mysql://root:prueba@45.79.56.138:3307/db_prueba?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
